Add Git MCP server and update documentation
- Installed Git MCP server for repository interaction
- Updated memory-bank with server documentation
- Added new SVG illustration
- Added animation fixes
- Cleaned up test files

--- a/features.html
+++ b/features.html
@@ -25,6 +25,8 @@
     <link rel="stylesheet" href="css/image-paths.css">
     <!-- Fix CSS -->
     <link rel="stylesheet" href="css/fixes.css">
+    <!-- Animation Fixes CSS -->
+    <link rel="stylesheet" href="css/fixes-animations.css">
     <!-- Image Optimization CSS -->
     <link rel="stylesheet" href="css/image-optimization.css">
     <!-- Testimonials CSS -->
