--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
     <!-- Fixes -->
     <link rel="stylesheet" href="css/fixes-bundle.css">
+    <!-- Animation Fixes -->
+    <link rel="stylesheet" href="css/fixes-animations.css">
 </head>
 <body>
     <!-- Header -->
